Update styles UI join link

--- a/Spotify/SPOTIFYServer/login/Templates/Components/Modal.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Components/Modal.html
@@ -6,7 +6,9 @@
         <h5 class="modal-title" id="modal-title-{{ id }}">{{ title }}</h5>
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">{{ message }}</div>
+      <div class="modal-body">{{ message }}
+        
+      </div>
       <div class="modal-footer">
         {% if closeText %}
           <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">{{ closeText }}</button>          
