--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_admin.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_admin.html
@@ -6,7 +6,7 @@
 {% endblock %} 
 
 {% block content %}
-<form method="post">
+<form method="post" id="login-form">
   {% csrf_token %}
   <h3 class="text-center mb-3 text-white">Administrator System</h3>
   <div class="text-center mb-3">
@@ -25,12 +25,12 @@
 
     <div class="mb-3">
       <label for="uname" class="text-white">Username</label>
-      <input type="text" id="uname" class="form-control" name="uname" required placeholder="Enter Username" />
+      <input type="text" id="uname" class="form-control required" name="uname" required placeholder="Enter Username" />
     </div>
   
     <div class="mb-3">
       <label for="psw" class="text-white">Password</label>
-      <input type="password" id="psw" class="form-control" name="psw" required placeholder="Enter Password"/>
+      <input type="password" id="psw" class="form-control required" name="psw" required placeholder="Enter Password"/>
     </div>
 
     <div class="form-check mb-3">
@@ -51,10 +51,19 @@
   $(document).ready(function() {
     // Add loading indicator to submit button
     $('button[type="submit"]').click(function() {
-      $(this).addClass('disabled');
-      $(this).html(`<div class="spinner-border text-light spinner-border-sm" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>`);
+      let valid = true;
+      const btnThis = this;
+      $('#login-form input.required').each(function() {
+        if (!$(this).val()) {
+          valid = false;
+        }
+      })
+      if (valid) {
+        $(btnThis).addClass('disabled');
+        $(btnThis).html(`<div class="spinner-border text-light spinner-border-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>`);
+      }
     });
 
     // Logic for error alert
