--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control.html
@@ -132,7 +132,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for key, value in data.items %}
+        {% for key, value in table.items %}
         <tr id="row-{{value.MasterAccout}}"> 
           <td>{{ value.MasterAccout }}</td>
           <td>{{ value.Linkjoin }}</td>
