--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
@@ -18,7 +18,7 @@
   <div class="container">
 
     {% if status == 'Thành công' %}
-      <div class="alert alert-danger px-3 py-2" role="alert">
+      <div class="alert alert-success px-3 py-2" role="alert">
         <div class="status"><strong>Kết quả</strong> : {{ status }}</div>
         <div class="dateime"><strong>Thời gian</strong> : {{ time }}</div>
       </div>
